cloudformation_stack.tf
resource "aws_cloudformation_stack" "tfer--VeeamBackupForAWS" {
  capabilities     = ["CAPABILITY_IAM"]
  disable_rollback = "false"
  name             = "VeeamBackupForAWS"

  outputs = {
    InstanceId = "i-0efae83c49ddad297"
  }

  template_body = "{\"AWSTemplateFormatVersion\":\"2010-09-09\",\"Conditions\":{\"CreateEIPCond\":{\"Fn::Equals\":[{\"Ref\":\"CreateEIP\"},\"true\"]},\"CreateLifecyclePolicyCond\":{\"Fn::Equals\":[{\"Ref\":\"CreateLifecyclePolicy\"},\"true\"]},\"CreateRebootAlarmCond\":{\"Fn::Equals\":[{\"Ref\":\"CreateRebootAlarm\"},\"true\"]},\"CreateRecoveryAlarmCond\":{\"Fn::Equals\":[{\"Ref\":\"CreateRecoveryAlarm\"},\"true\"]}},\"Description\":\"Veeam Cloud Backup for AWS CloudFormation template: Configure [...]
}
